<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.favorite.FavoriteFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id='@+id/widgetConstraint_CardView'
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:background="@color/carview"
            >

            <ImageView
                android:id="@+id/favorite_product_image_view"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_margin="8dp"
                android:background="@drawable/circulo"
                android:contentDescription="@string/todo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/sologlobos" />

            <TextView
                android:id="@+id/favorite_name_product_text_view"
                style="@style/TextViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/example_brand"
                android:textColor="@color/black60"
                app:layout_constraintStart_toEndOf="@+id/favorite_product_image_view"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/favorite_name_costo_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/zeyada"
                android:text="@string/cost"
                android:textColor="@color/black60"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/favorite_name_product_text_view"
                app:layout_constraintTop_toBottomOf="@+id/favorite_name_product_text_view"
                tools:ignore="MissingConstraints,TextContrastCheck" />

            <RatingBar
                android:id="@+id/favorite_ratingBar_popularity"
                android:layout_width="241dp"
                android:layout_height="61dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/favorite_product_image_view"
                app:layout_constraintTop_toBottomOf="@+id/favorite_name_costo_text_view"
                tools:ignore="SpeakableTextPresentCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>